test/lit/tile_fusion/fusion_region_verify_yield_type_mismatch.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// Guards fusion_region verifier diagnostics when yielded value types do not
// match region result types.
//
// RUN: not ptoas --pto-level=level3 --emit-pto-ir %s 2>&1 | FileCheck %s

module {
  func.func @fusion_region_yield_type_mismatch_invalid() {
    %c0 = arith.constant 0 : index
    %0 = pto.fusion_region {
      pto.yield(%c0) : (index) -> ()
    } : i32
    return
  }
}

// CHECK: error: 'pto.fusion_region' op expects yielded value #0 to have type 'i32', got 'index'
